Fix phantom off-canvas leftovers of shapes on shape layers

We should clear projection content that was cropped by image bounds
and which was changed by the shape movements.

BUG:415747